--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://muhammadattia.github.io"
 title_description: "I'm a Software Engineer with a passion for Android Development,problem-solving, Programming Competitions, and Machine Learning."
 title_image: "https://s.gravatar.com/avatar/6c05d7a860832c2a18c048d041f19e92?s=80"
 google_analytics: "UA-20365477-4"
-#disqus_account: cartenoire
+disqus_account: muhammad_attia
 github_repository: https://github.com/MuhammadAttia/muhammadattia.github.io
 #addthis_id: ra-513c6fa83da6ec67
 post_limit: 5
