--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title_image: "https://s.gravatar.com/avatar/6c05d7a860832c2a18c048d041f19e92?s=8
 google_analytics: "UA-20365477-4"
 disqus_account: muhammad_attia
 github_repository: https://github.com/MuhammadAttia/muhammadattia.github.io
-#addthis_id: ra-513c6fa83da6ec67
+addthis_id: ra-59ee06eb2e1e3f3e
 post_limit: 5
 
 # Social usernames/URLs
