--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ github_username:  MuhammadAttia
 linkedin_link: https://www.linkedin.com/in/muhammadattia95/
 #google_plus_link: http://carte-noire.jacobtomlinson.co.uk/
 #stackoverflow_link: http://carte-noire.jacobtomlinson.co.uk/
-xing_link:
+#xing_link:
 facebook_link: https://www.facebook.com/MuhammadAttia95
 
 # Footer
